--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,9 @@
     <string name="email">Email address</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="title">Title</string>
+    <string name="price">Price</string>
+    <string name="img">Images</string>
+    <string name="description">Description</string>
 
 </resources>
