--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,12 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="create_user">Create User</string>
+    <string name="viewItemActivity">View item activity</string>
+    <string name="newItemActivity">New item activity</string>
+    <string name="upload_item">Upload item</string>
+    <string name="upload_imgs">Upload images</string>
+    <string name="submit">Submit</string>
+    <string name="goback">Go back</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
@@ -35,5 +41,6 @@
     <string name="price">Price</string>
     <string name="img">Images</string>
     <string name="description">Description</string>
+    <string name="buy">Kjøp</string>
 
 </resources>
